--- a/.gitignore
+++ b/.gitignore
@@ -52,6 +52,9 @@ ExportedObj/
 # Unity3D generated file on crash reports
 sysinfo.txt
 
+# FGUI
+[Uu]UIProjects/FGUIProject/settings/*.json
+
 # Builds
 *.apk
 *.unitypackage
